--- a/portal-frontend/src/app/features/edit-submission/proposal/roso-proposal/roso-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/roso-proposal/roso-proposal.component.html
@@ -83,11 +83,11 @@
           placeholder="Type comment"
         ></textarea>
       </mat-form-field>
-      <span class="subtext">Characters left: {{ 4000 - purposeText.textLength }}</span>
       <div *ngIf="purpose.invalid && (purpose.dirty || purpose.touched)" class="field-error">
         <mat-icon>warning</mat-icon>
         <div *ngIf="purpose.errors?.['required']">This field is required</div>
       </div>
+      <div class="subtext">Characters left: {{ 4000 - purposeText.textLength }}</div>
     </div>
     <div class="full-row">
       <label>Proposal Dimensions</label>
@@ -175,13 +175,14 @@
           placeholder="Type comment"
         ></textarea>
       </mat-form-field>
-      <span class="subtext">Characters left: {{ 4000 - suitabilityText.textLength }}</span>
       <div *ngIf="soilTypeRemoved.invalid && (soilTypeRemoved.dirty || soilTypeRemoved.touched)" class="field-error">
         <mat-icon>warning</mat-icon>
         <div *ngIf="soilTypeRemoved.errors?.['required']">This field is required</div>
       </div>
-      <div class="subtext">Example: Aggregate, Extraction, Placer Mining, Peat Extraction, Soil etc.</div>
+      <mat-hint class="subtext">Example: Aggregate, Extraction, Placer Mining, Peat Extraction, Soil etc.</mat-hint>
+      <div class="subtext">Characters left: {{ 4000 - suitabilityText.textLength }}</div>
     </div>
+
     <div class="full-row">
       <label for="agricultural-support">
         What steps will be taken to reduce impacts to surrounding agricultural land?
@@ -197,7 +198,6 @@
           placeholder="Type comment"
         ></textarea>
       </mat-form-field>
-      <span class="subtext">Characters left: {{ 4000 - reduceNegativeImpactsText.textLength }}</span>
       <div
         *ngIf="reduceNegativeImpacts.invalid && (reduceNegativeImpacts.dirty || reduceNegativeImpacts.touched)"
         class="field-error"
@@ -205,11 +205,13 @@
         <mat-icon>warning</mat-icon>
         <div *ngIf="reduceNegativeImpacts.errors?.['required']">This field is required</div>
       </div>
-      <div class="subtext">
+      <mat-hint class="subtext">
         Example: Project phasing, providing landscape screening, fencing, buffering, erosion and sediment control,
         temporary or permanent drainage, etc.
-      </div>
+      </mat-hint>
+      <div class="subtext">Characters left: {{ 4000 - reduceNegativeImpactsText.textLength }}</div>
     </div>
+
     <div class="full-row">
       <label class="subheading2" for="proposal-map">Proposal Map / Site Plan</label>
       <div class="subtext">A visual representation of your proposal.</div>
