--- a/portal-frontend/src/app/features/edit-submission/proposal/excl-proposal/excl-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/excl-proposal/excl-proposal.component.html
@@ -91,11 +91,11 @@
           placeholder="Type comment"
         ></textarea>
       </mat-form-field>
-      <span class="subtext">Characters left: {{ 4000 - purposeText.textLength }}</span>
       <div *ngIf="purpose.invalid && (purpose.dirty || purpose.touched)" class="field-error">
         <mat-icon>warning</mat-icon>
         <div *ngIf="purpose.errors?.['required']">This field is required</div>
       </div>
+      <div class="subtext">Characters left: {{ 4000 - purposeText.textLength }}</div>
     </div>
     <div class="full-row">
       <label for="whyExclude"> Explain why you believe that the parcel(s) should be excluded from the ALR </label>
@@ -109,7 +109,7 @@
           placeholder="Type comment"
         ></textarea>
       </mat-form-field>
-      <span class="subtext">Characters left: {{ 4000 - outsideLandsText.textLength }}</span>
+      <div class="subtext">Characters left: {{ 4000 - outsideLandsText.textLength }}</div>
       <div *ngIf="whyExclude.invalid && (whyExclude.dirty || whyExclude.touched)" class="field-error">
         <mat-icon>warning</mat-icon>
         <div *ngIf="whyExclude.errors?.['required']">This field is required</div>
