--- a/portal-frontend/src/app/features/edit-submission/proposal/nfu-proposal/nfu-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-submission/proposal/nfu-proposal/nfu-proposal.component.html
@@ -50,11 +50,11 @@
           placeholder="Type comment"
         ></textarea>
       </mat-form-field>
-      <span class="subtext">Characters left: {{ 4000 - purposeText.textLength }}</span>
       <div *ngIf="purpose.invalid && (purpose.dirty || purpose.touched)" class="field-error">
         <mat-icon>warning</mat-icon>
         <div *ngIf="purpose.errors?.['required']">This field is required</div>
       </div>
+      <div class="subtext">Characters left: {{ 4000 - purposeText.textLength }}</div>
     </div>
     <div class="full-row">
       <label for="outside-lands">
@@ -71,11 +71,11 @@
           placeholder="Type comment"
         ></textarea>
       </mat-form-field>
-      <span class="subtext">Characters left: {{ 4000 - outsideLandsText.textLength }}</span>
       <div *ngIf="outsideLands.invalid && (outsideLands.dirty || outsideLands.touched)" class="field-error">
         <mat-icon>warning</mat-icon>
         <div *ngIf="outsideLands.errors?.['required']">This field is required</div>
       </div>
+      <div class="subtext">Characters left: {{ 4000 - outsideLandsText.textLength }}</div>
     </div>
     <div class="full-row">
       <label for="agriculture-support">
@@ -91,7 +91,6 @@
           placeholder="Type comment"
         ></textarea>
       </mat-form-field>
-      <span class="subtext">Characters left: {{ 4000 - agricultureSupportText.textLength }}</span>
       <div
         *ngIf="agricultureSupport.invalid && (agricultureSupport.dirty || agricultureSupport.touched)"
         class="field-error"
@@ -99,6 +98,7 @@
         <mat-icon>warning</mat-icon>
         <div *ngIf="agricultureSupport.errors?.['required']">This field is required</div>
       </div>
+      <div class="subtext">Characters left: {{ 4000 - agricultureSupportText.textLength }}</div>
     </div>
     <div class="full-row">
       <label for="will-import-fill">
@@ -143,7 +143,6 @@
             matInput
           ></textarea>
         </mat-form-field>
-        <span class="subtext">Characters left: {{ 4000 - fillTypeToPlaceText.textLength }}</span>
         <div
           *ngIf="fillTypeDescription.invalid && (fillTypeDescription.dirty || fillTypeDescription.touched)"
           class="field-error"
@@ -151,7 +150,8 @@
           <mat-icon>warning</mat-icon>
           <div *ngIf="fillTypeDescription.errors?.['required']">This field is required</div>
         </div>
-        <div class="subtext">Example: Aggregate, topsoil, structural fill, sand, gravel, etc</div>
+        <mat-hint class="subtext">Example: Aggregate, topsoil, structural fill, sand, gravel, etc</mat-hint>
+        <div class="subtext">Characters left: {{ 4000 - fillTypeToPlaceText.textLength }}</div>
       </div>
     </div>
 
@@ -167,7 +167,6 @@
             matInput
           ></textarea>
         </mat-form-field>
-        <span class="subtext">Characters left: {{ 4000 - fillOriginToPlaceText.textLength }}</span>
         <div
           *ngIf="fillOriginDescription.invalid && (fillOriginDescription.dirty || fillOriginDescription.touched)"
           class="field-error"
@@ -175,6 +174,7 @@
           <mat-icon>warning</mat-icon>
           <div *ngIf="fillOriginDescription.errors?.['required']">This field is required</div>
         </div>
+        <div class="subtext">Characters left: {{ 4000 - fillOriginToPlaceText.textLength }}</div>
       </div>
     </div>
 
