Sort columns and implement column delete
* Sort columns while mapping them
* Hook up delete button and add to controller

--- a/alcs-frontend/src/app/features/admin/card-status/card-status-dialog/card-status-dialog.component.html
+++ b/alcs-frontend/src/app/features/admin/card-status/card-status-dialog/card-status-dialog.component.html
@@ -37,7 +37,7 @@
 
   <div class="split">
     <div [matTooltip]="canDeleteReason" [matTooltipDisabled]="canDelete">
-      <button [disabled]="!canDelete" mat-stroked-button color="warn" mat-dialog-close="false">Delete</button>
+      <button [disabled]="!canDelete" (click)='onDelete()' mat-stroked-button color="warn">Delete</button>
     </div>
     <div class="button-container">
       <button mat-stroked-button color="primary" mat-dialog-close="false">Close</button>
