Adjust field alignment for  incl/excl decision components
* Use correct field for null checks on conditions page for no data

--- a/alcs-frontend/src/app/features/application/decision/conditions/condition/condition.component.html
+++ b/alcs-frontend/src/app/features/application/decision/conditions/condition/condition.component.html
@@ -14,7 +14,7 @@
   <div>
     <div class="subheading2">Component to Condition</div>
     <span class="component-labels">{{ condition.componentLabelsStr }}</span>
-    <app-no-data *ngIf="!condition.componentLabels"></app-no-data>
+    <app-no-data *ngIf="!condition.componentLabelsStr"></app-no-data>
   </div>
 
   <div>
