--- a/portal-frontend/src/app/features/home/home.component.html
+++ b/portal-frontend/src/app/features/home/home.component.html
@@ -31,7 +31,14 @@
         </app-warning-banner>
         <app-application-list></app-application-list>
       </mat-tab>
-      <mat-tab label="Notice of Intent"> Notice of Intent </mat-tab>
+      <mat-tab label="Notice of Intent">
+        <app-warning-banner>
+          Create a Notice of Intent if you are proposing to remove soil and/or place fill that does not qualify for
+          exemption under Section 35 of the Agricultural Land Reserve Use Regulation. All notices are subject to a $150
+          fee.
+        </app-warning-banner>
+        <app-noi-list></app-noi-list>
+      </mat-tab>
       <mat-tab label="Notification of SRW"> Notification of SRW </mat-tab>
     </mat-tab-group>
   </div>
