--- a/portal-frontend/src/app/features/home/noi-list/noi-list.component.html
+++ b/portal-frontend/src/app/features/home/noi-list/noi-list.component.html
@@ -6,11 +6,11 @@
 
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="7">No Applications Created</td>
+        <td class="mat-cell" style='text-align: center' colspan="7">No NOIs Created</td>
       </tr>
 
       <ng-container matColumnDef="fileNumber">
-        <th mat-header-cell *matHeaderCellDef>Application ID</th>
+        <th mat-header-cell *matHeaderCellDef>NOI ID</th>
         <td mat-cell *matCellDef="let row">{{ row.fileNumber }}</td>
       </ng-container>
 
@@ -25,7 +25,7 @@
       </ng-container>
 
       <ng-container matColumnDef="applicationType">
-        <th mat-header-cell *matHeaderCellDef>Application Type</th>
+        <th mat-header-cell *matHeaderCellDef>NOI Type</th>
         <td mat-cell *matCellDef="let row">{{ row.type }}</td>
       </ng-container>
 
@@ -50,7 +50,12 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let row">
-          <button [routerLink]="'/application/' + row.fileNumber" *ngIf="row.canView" mat-flat-button color="primary">
+          <button
+            [routerLink]="'/notice-of-intent/' + row.fileNumber"
+            *ngIf="row.canView"
+            mat-flat-button
+            color="primary"
+          >
             View
           </button>
         </td>
