--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-details.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/parcels/parcel-details.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="step-description">
-    <h3>Identify Parcels Under Application</h3>
-    <p>Provide parcel identification and registered ownership information for each parcel under application.</p>
+    <h3>Identify Parcels Under Notice of Intent</h3>
+    <p>Provide parcel identification and registered ownership information for each parcel.</p>
     <p>*All fields are required unless stated optional.</p>
     <div class="step-documents">
       <h6>Documents needed for this step:</h6>
@@ -23,7 +23,7 @@
     </mat-expansion-panel-header>
 
     <app-noi-parcel-entry
-      [isDraft]='draftMode'
+      [isDraft]="draftMode"
       [parcel]="parcel"
       [$owners]="$owners"
       [fileId]="fileId"
@@ -52,7 +52,7 @@
   </mat-expansion-panel>
 
   <div>
-    <button mat-stroked-button color="primary" (click)="onAddParcel()">Add another parcel to the application</button>
+    <button mat-stroked-button color="primary" (click)="onAddParcel()">Add another parcel</button>
   </div>
 
   <div class="button-container">
