--- a/portal-frontend/src/app/shared/owner-dialogs/crown-owner-dialog/crown-owner-dialog.component.scss
+++ b/portal-frontend/src/app/shared/owner-dialogs/crown-owner-dialog/crown-owner-dialog.component.scss
@@ -1,5 +1,5 @@
-@use '../../../../../../styles/functions' as *;
-@use '../../../../../../styles/colors';
+@use '../../../../styles/functions' as *;
+@use '../../../../styles/colors';
 
 .actions {
   button:not(:last-child) {
