--- a/portal-frontend/src/app/shared/owner-dialogs/owners-dialog/all-owners-dialog.component.html
+++ b/portal-frontend/src/app/shared/owner-dialogs/owners-dialog/all-owners-dialog.component.html
@@ -9,6 +9,8 @@
       [owners]="owners"
       [fileId]="fileId"
       [isShowAllOwners]="true"
+      [documentService]="data.documentService"
+      [ownerService]="data.ownerService"
     ></app-parcel-owners>
   </div>
 </div>
