--- a/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
@@ -257,6 +257,8 @@
           [owners]="parcel.owners"
           (onOwnersUpdated)="onOwnersUpdated.emit()"
           (onOwnerRemoved)="onOwnerRemoved($event)"
+          [documentService]="applicationDocumentService"
+          [ownerService]="applicationOwnerService"
           [disabled]="_disabled"
         ></app-parcel-owners>
       </div>
@@ -339,6 +341,8 @@
           [owners]="parcel.owners"
           (onOwnersUpdated)="onOwnersUpdated.emit()"
           (onOwnerRemoved)="onOwnerRemoved($event)"
+          [ownerService]="applicationOwnerService"
+          [documentService]="applicationDocumentService"
           [disabled]="_disabled"
           [isCrown]="true"
         ></app-parcel-owners>
