--- a/portal-frontend/src/app/shared/owner-dialogs/parcel-owners/parcel-owners.component.scss
+++ b/portal-frontend/src/app/shared/owner-dialogs/parcel-owners/parcel-owners.component.scss
@@ -1,5 +1,5 @@
-@use '../../../../../../styles/functions' as *;
-@use '../../../../../../styles/colors';
+@use '../../../../styles/functions' as *;
+@use '../../../../styles/colors';
 
 .actions {
   button:not(:last-child) {
